[package]
name = "domtree"
version = "0.2.0"
edition = "2021"
authors = ["schrodingerzhu <yifanzhu@rochester.edu>"]
license = "MIT"
description = "dominance relation calculation"
keywords = ["ssa", "graph", "dominance-frontier", "dominator"]
categories = ["algorithms", "compilers"]
homepage = "https://github.com/schrodingerzhu/domtree"
repository = "https://github.com/schrodingerzhu/domtree"
readme = "README.md"

[dev-dependencies]
rand = "0.8.5"